try to fix heading on small devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html {
+    font-size: min(4vw, 16px);
+}
